--- a/public/playlists.html
+++ b/public/playlists.html
@@ -100,6 +100,11 @@
                     <h2>Add Tracks</h2>
                 </div>
                 <p class="muted" style="margin-bottom: 16px;">Select tracks to add to this playlist</p>
+                <div style="margin-bottom: 16px;">
+                    <input type="text" id="track-search" placeholder="🔍 Search by title, artist or genre..."
+                        style="width: 100%; padding: 12px 16px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.1); background: rgba(255,255,255,0.05); color: #fff; font-size: 0.95rem;"
+                        oninput="filterAvailableTracks()">
+                </div>
                 <div class="table-container" style="max-height: 400px; overflow-y: auto;">
                     <table>
                         <thead>
@@ -169,6 +174,7 @@
         let currentUser = null;
         let currentPlaylistId = null;
         let allTracks = [];
+        let availableTracks = [];  // For search filtering
 
         // Toast notifications
         function showToast(message, type = 'success') {
@@ -449,16 +455,28 @@
                 allTracks = data.tracks || data;
 
                 const existingIds = existingTrackIds.map(id => id.toString());
-                const available = allTracks.filter(t => !existingIds.includes(t._id.toString()));
+                availableTracks = allTracks.filter(t => !existingIds.includes(t._id.toString()));
 
-                const tbody = document.getElementById('available-tracks-body');
+                // Clear search field when loading new playlist
+                const searchInput = document.getElementById('track-search');
+                if (searchInput) searchInput.value = '';
 
-                if (!available.length) {
-                    tbody.innerHTML = '<tr><td colspan="4" class="center muted" style="padding: 20px;">All tracks already added</td></tr>';
-                    return;
-                }
+                renderAvailableTracks(availableTracks);
+            } catch (err) {
+                console.error(err);
+            }
+        }
 
-                tbody.innerHTML = available.map(t => `
+        // Render available tracks table
+        function renderAvailableTracks(tracks) {
+            const tbody = document.getElementById('available-tracks-body');
+
+            if (!tracks.length) {
+                tbody.innerHTML = '<tr><td colspan="4" class="center muted" style="padding: 20px;">No tracks found</td></tr>';
+                return;
+            }
+
+            tbody.innerHTML = tracks.map(t => `
           <tr>
             <td><span class="track-title">${t.title}</span></td>
             <td>${t.artist || '-'}</td>
@@ -468,9 +486,24 @@
             </td>
           </tr>
         `).join('');
-            } catch (err) {
-                console.error(err);
+        }
+
+        // Filter available tracks by search query
+        function filterAvailableTracks() {
+            const query = document.getElementById('track-search').value.toLowerCase().trim();
+
+            if (!query) {
+                renderAvailableTracks(availableTracks);
+                return;
             }
+
+            const filtered = availableTracks.filter(t =>
+                (t.title && t.title.toLowerCase().includes(query)) ||
+                (t.artist && t.artist.toLowerCase().includes(query)) ||
+                (t.genre && t.genre.toLowerCase().includes(query))
+            );
+
+            renderAvailableTracks(filtered);
         }
 
         // Add track to playlist
